--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Image Editor | Vikas Lalwani</title>
+		<title>Image Editor | Tejas Mistry</title>
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
 		<link href = "css/main.css" type="text/css" rel="stylesheet">
 	</head>
